--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -322,25 +322,24 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rsconnect_0.8.16        
-##   rstudioapi_0.11          rvest_0.3.5             
-##   scales_1.1.1             selectr_0.4.2           
-##   sem_3.1.11               semTools_0.5.3          
-##   skimr_2.1.1              snakecase_0.11.0        
-##   splines_4.0.2            StanHeaders_2.21.0.5    
-##   statmod_1.4.34           stats_4.0.2             
-##   stats4_4.0.2             stringi_1.4.6           
-##   stringr_1.4.0            survival_3.1-12         
-##   sys_3.3                  testthat_2.3.2          
-##   tibble_3.0.1             tidyr_1.1.0             
-##   tidyselect_1.1.0         tidyverse_1.3.0         
-##   tinytex_0.23             tmvnsim_1.0-2           
-##   tools_4.0.2              utf8_1.1.4              
-##   utils_4.0.2              vctrs_0.3.1             
-##   viridis_0.5.1            viridisLite_0.3.0       
-##   whisker_0.4              withr_2.2.0             
-##   xfun_0.14                xml2_1.3.2              
-##   yaml_2.2.1
+##   rprojroot_1.3.2          rstudioapi_0.11         
+##   rvest_0.3.5              scales_1.1.1            
+##   selectr_0.4.2            sem_3.1.11              
+##   semTools_0.5.3           skimr_2.1.1             
+##   snakecase_0.11.0         splines_4.0.2           
+##   StanHeaders_2.21.0.5     statmod_1.4.34          
+##   stats_4.0.2              stats4_4.0.2            
+##   stringi_1.4.6            stringr_1.4.0           
+##   survival_3.1-12          sys_3.3                 
+##   testthat_2.3.2           tibble_3.0.1            
+##   tidyr_1.1.0              tidyselect_1.1.0        
+##   tidyverse_1.3.0          tinytex_0.23            
+##   tmvnsim_1.0-2            tools_4.0.2             
+##   utf8_1.1.4               utils_4.0.2             
+##   vctrs_0.3.1              viridis_0.5.1           
+##   viridisLite_0.3.0        whisker_0.4             
+##   withr_2.2.0              xfun_0.14               
+##   xml2_1.3.2               yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -1203,12 +1202,12 @@ But it's also helpful just to see a list of the columns in the data with the gli
 ## $ status <chr> "single", "single", "available", "single...
 \end{verbatim}
 
-The glimpse() command is useful but is quickly allows you to see all of the columns. Moreover, it allows you to see the type for each column. Types were briefly discussed in the last chapter. Notice in the output beside each column name some columns are labeled which is short for double -- a type of numeric column. Other columns columns are labeled which is short for character - meaning the columns contain characters. These designations will become important in the next chapter as we prepare data for analysis.
+The glimpse() command is useful because it quickly allows you to see all of the columns. Moreover, it allows you to see the type for each column. Types were briefly discussed in the last chapter. Notice in the output beside each column name that some columns are labeled ``dbl'' which is short for double -- a type of numeric column. Other columns are labeled ``chr'' which is short for character - meaning the columns contain characters. These designations will become important in the next chapter as we prepare data for analysis.
 
 \hypertarget{select}{%
 \subsection{select()}\label{select}}
 
-The select() command allows you to obtain a subset of the columns in your data. The commands below can be used to obtain the age and height columns. You can read the command as: take the okcupid\_profiles data and then select the age and height columns. The ``\%\textgreater\%'' symbol can be read as ``and then''. You can see that this code prints out the data with just the age and height columns. Remember, use SHIFT-ENTER or SHIFT-RETURN to move he next line in the block of code.
+The select() command allows you to obtain a subset of the columns in your data. The commands below can be used to obtain the age and height columns. You can read the command as: take the okcupid\_profiles data and then select the age and height columns. The ``\%\textgreater\%'' symbol can be read as ``and then''. You can see that this code prints out the data with just the age and height columns. Remember, use SHIFT-ENTER or SHIFT-RETURN to move to the next line in the block of code.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1288,7 +1287,7 @@ The glimpse() command shows us that we kept all the columns except the age and h
 
 The summarise() command can be used to generate descriptive statistics for a specified column. You can easily calculate column descriptive statistics using the corresponding commands for mean(), sd(), min(), max(), among others. In the example below we calculate the mean for the age column.
 
-In code below mean(age, na.rm = TRUE) indicates to R that it should calculate the mean of the age column. The na.rm indicates how missing values should be handled. The na stands for not available; in R missing values are classified as Not Available or NA. The rm stands for remove. Consequently, na.rm is asking: ``Should we remove missing values when calculating the mean?'' The TRUE indicates that yes, missing values should be removed when calculating the mean. The result of this calculation is placed into a variable labelled age\_mean, though we could have used any label we wanted instead of age\_mean. We see that the mean of the age column is, with rounding, 32.3.
+In the code below, mean(age, na.rm = TRUE), indicates to R that it should calculate the mean of the age column. The na.rm indicates how missing values should be handled. The na stands for not available; in R missing values are classified as Not Available or NA. The rm stands for remove. Consequently, na.rm is asking: ``Should we remove missing values when calculating the mean?'' The TRUE indicates that yes, missing values should be removed when calculating the mean. The result of this calculation is placed into a variable labelled age\_mean, though we could have used any label we wanted instead of age\_mean. We see that the mean of the age column is, with rounding, 32.3.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1361,7 +1360,7 @@ Notice the structure of the original data below in the glimpse() output. There i
 ## $ status <chr> "single", "single", "available", "single...
 \end{verbatim}
 
-We use the the filter command to select a subset of the rows based on the contents of any column. In this case the sex column. Notice the double equals sign is used to indicate ``equal to''. The reason a double equals sign is used here (instead of a single equals sign) is to distinguish it from the use of the single equals sign in the summarise command above. In the summarise command above, the single equal sign was used to indicate ``assign to''. That is assign to age\_mean the mean of the column age after it is calculated calculated. A single equals sign indicates ``assign to'' whereas a double equals sign indicates ``is equal to''.
+We use the filter command to select a subset of the rows based on the content of any column. In this case the sex column is used to obtain a subset of the rows; the rows with the value ``m'' are obtained. Notice the double equals sign is used to indicate ``equal to''. The reason a double equals sign is used here (instead of a single equals sign) is to distinguish it from the use of the single equals sign in the summarise command above. In the summarise command above, the single equal sign was used to indicate ``assign to''. That is, assign to age\_mean the mean of the column age after it is calculated. A single equals sign indicates ``assign to'' whereas a double equals sign indicates ``is equal to''.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1370,7 +1369,7 @@ We use the the filter command to select a subset of the rows based on the conten
 \end{Highlighting}
 \end{Shaded}
 
-We use glimpse() to inspect these all male data. Notice that only the letter m is in the sex column - indicating only males are in the data set. Also notice that there are 35829 rows in the okcupid\_males data; fewer people because males are a subset of the total number of rows.
+We use glimpse() to inspect these all male data. Notice that only the letter m is in the sex column - indicating only males are in the data set. Also notice that there are 35829 rows in the okcupid\_males data - fewer people because males are a subset of the total number of rows.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1389,7 +1388,7 @@ We use glimpse() to inspect these all male data. Notice that only the letter m i
 ## $ status <chr> "single", "single", "available", "single...
 \end{verbatim}
 
-The filter command can be commbined with the summarise command to get the descriptive statistics for males without the hassle of creating a new data. This is again done using the \%\textgreater\% ``and then'' operator.
+The filter command can be combined with the summarise command to get the descriptive statistics for males without the hassle of creating new data. This is again done using the \%\textgreater\% ``and then'' operator.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1455,7 +1454,7 @@ The process we used with the filter command would quickly become onerous if we h
 ## 2 m         32.0   9.03
 \end{verbatim}
 
-Fortunately, it's possible to use more than one grouping varible with the group\_by() command. In the code below we group by sex and status (i.e., dating status).
+Fortunately, it's possible to use more than one grouping variable with the group\_by() command. In the code below we group by sex and status (i.e., dating status).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1492,7 +1491,7 @@ The resulting output provide for age the mean and standard deviation for every c
 \hypertarget{mutate}{%
 \subsection{mutate()}\label{mutate}}
 
-The mutate() command can be used to calculate a new column in a data. In the example below we calculate a new column called age\_centered which is the new version of the age\_column where the mean of the column has been removed from every value. This is merely an example of the many different types of calculations can can perform to create a new column using mutate().
+The mutate() command can be used to calculate a new column in a data. In the example below we calculate a new column called age\_centered which is the new version of the age\_column where the mean of the column has been removed from every value. This is merely an example of the many different types of calculations we can perform to create a new column using mutate().
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1549,7 +1548,7 @@ We begin by loading a new data.
 ## )
 \end{verbatim}
 
-The glimpse() command reveals that this is a small data where every row represents one rat. The sex of the rat is recorded as well as, for each of two time points, a rating of vomiting and aggression.
+The glimpse() command reveals that this is a small data set where every row represents one rat. The sex of the rat is recorded as well as, for each of two time points, a rating of vomiting and aggression.
 
 \begin{Shaded}
 \begin{Highlighting}[]
