--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -1,5 +1,7 @@
 # Samples
 
+packages required etc.
+
 Researchers are usually interested in describing the attributes of a population; numbers that describe the population are called parameters. Two parameters that are frequently of interest are the mean and variance of the population.  Unfortunately,  it’s rarely possible to obtain information from every member of a population to calculate a parameter. Consequently, researchers use subsets of the population called samples to estimate parameters. Numbers calculated from sample data are called statistics. Typically, sample statistics are used to estimate population parameters.
 
 Sample statistics, however, often differ from population parameters. The difference between a sample statistic and the population parameter occurs because the sample data is random subset of the population data — with correspondingly fewer observations. Sometimes the sample statistic will be higher than the population parameter; other times the sample statistic will be lower than the population parameter.  Because random sampling is used to select the sample data the direction and magnitude of the difference between the sample statistic the population parameter will vary randomly.
@@ -181,201 +183,113 @@ s = \sqrt{\frac{\sum{(x - \bar{x})^2}}{n-1}}
 
 ## Estimating SMD
 
-So far we have considered people's heights as a single population. You may have noticed, however, that we have column indicating the sex of each person. Consequently, we could think of there being two populations - a population of heights of males and a population of heights for females. When you have two populations often it is desirable to express the differences between the two populations as a standardized mean difference (SMD) also known as Cohen's $d$.
-
-We begin be determining the mean and standard deviation of each population with the code below:
-
-```{r}
-pop_data %>% 
-  group_by(sex) %>%
-  summarise(mean = mean(height),
-            sd = sd.pop(height)) %>%
-  as.data.frame()
-```
-
-From this output we see the population parameters for males and females. The mean of the male population heights is 180 ($\mu_{male} = 180$) whereas the mean of the female population heights is 165 ($\mu_{male} = 165$). Both populations have a standard deviation of 10.1 ($\sigma = \sigma_{female} = \sigma_{male} = 10.1$):
-
-$$
-\begin{aligned} 
-\mu_{female} &= 165 \\
-\mu_{male} &= 180 \\
-\sigma = \sigma_{female} = \sigma_{male} &= 10.1\\
-\end{aligned} 
-$$
-
-### Population SMD
-
-The population-level standardized mean difference (i.e., Cohen's $d$ or $\delta$) is calculated using  Formula \@ref(eq:popsmdch5).
+We are interested in the sample standardized mean difference ($d$) to the extent that it provides an estimate of the population standardized mean difference ($\delta$). The population standardized mean difference is calculated using Formula \@ref(eq:popsmdch5):
 
 \begin{equation} 
 \delta  = \frac{\mu_{1} - \mu_{2}}{\sigma} 
       (\#eq:popsmdch5)
 \end{equation} 
 
-We use the previously obtained population parameters in Formula \@ref(eq:popsmdch5) and find that the standardized mean difference is 1.49 (i.e., $\delta = 1.49$). This population-level difference is illustrated in Figure \@ref(fig:sexpop).
+We can calculate the population standardized mean difference for men and women once we have the respective population means and standard deviations. Recall the initial data mixed males and females. We begin by creating separate data sets for males and females:
 
-$$
-\begin{aligned} 
-\delta  &= \frac{\mu_{male} - \mu_{female}}{\sigma} \\
-&= \frac{180 - 165}{10.1} \\
-&= \frac{15}{10.1} \\
-&= 1.49 \\
-\end{aligned} 
-$$
+```{r}
+male_population_heights <- pop_data %>% 
+  filter(sex == "male") 
 
-
-
-```{r, out.height="80%", echo = F}
-textMean1 <- expression(Delta~"M" == 15)
-textd1 <- expression(delta == 1.49)
-textfemale1 <- expression("Female"~mu == 165)
-textmale1 <- expression("Male"~mu == 180)
-texts1 <- expression(sigma == 10.1)
-
-
-
-twopop <- ggplot(data = pop_data,
-       mapping = aes(x = height,
-                     alpha = sex)) +
-  geom_histogram(position = "identity",
-                 boundary = 0,
-                 binwidth = 5,
-                 fill = "black",
-                 color =  "black") +
-  theme_classic() +
-  scale_alpha_manual(values = c(.20, .50)) +
-  facet_wrap(~sex, nrow = 2) +
-  scale_x_continuous(breaks = seq(100, 250, by = 10)) +
-  geom_vline(xintercept = 165, size = 2) +
-  geom_vline(xintercept = 180, size = 2) +
-  labs(x = "Height (cm)", y = "Count", alpha = "Sex") +
-  annotate("text", x = 230, y = 9000, 
-           parse = T, label = as.character(textMean1)) +
-  annotate("text", x = 230, y = 7000, 
-           parse = T, label = as.character(textd1)) +
-  annotate("text", x = 90, y = 9000, 
-           parse = T, label = as.character(textfemale1), hjust = 0) +
-  annotate("text", x = 90, y = 7000, 
-           parse = T, label = as.character(textmale1), hjust = 0) +
-  annotate("text", x = 90, y = 5000, 
-           parse = T, label = as.character(texts1), hjust = 0)
-
-ggsave(filename = "ch_samples/images/sex_pops.png", dpi = 300, width = 8, height = 6)
+female_population_heights <- pop_data %>% 
+  filter(sex == "female") 
 ```
 
-```{r sexpop, echo=FALSE, out.width="95%", fig.cap="Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\\mu$) for the two populations."}
-knitr::include_graphics("ch_samples/images/sex_pops.png")
+Next, we calculate the mean and standard deviation of each population:
+
+```{r}
+male_population_heights %>% 
+  summarise(mean = mean(height),
+            sd = sd.pop(height))
+
+female_population_heights %>% 
+  summarise(mean = mean(height),
+            sd = sd.pop(height))
 ```
 
-### Sample SMD
-
-
-#### Estimating means
-
-#### Estimating variance
-
-\begin{equation} 
-s_{pooled}^2  = \frac{(n_1 -1)s_1^2 + (n_2 -1)s_2^2}{n_1 + n_2-2}
-      (\#eq:poolvarch5)
-\end{equation} 
-
-
-\begin{equation} 
-s_{pooled}^2  = \frac{s_{1}^2 + s_{2}^2}{2} 
-      (\#eq:poolvarequalch5)
-\end{equation} 
-
-
-$$
-\begin{aligned} 
-s_{pooled}^2  &= \frac{s_{male}^2 + s_{female}^2}{2} \\
-\end{aligned} 
-$$
-
-
-```{r pool1, echo=FALSE, out.width="80%", fig.cap="The male sample variance (n-1) is an estimate of male population variance. Likewise, the female sample variance (n-1) is an estimate of the female population variance. "}
-knitr::include_graphics("ch_samples/images/pool1.png")
-```
-
-
-```{r pool2, echo=FALSE, out.width="80%", fig.cap="We assume the population variances are the same. Therefore, the male and female sample variances are both estimates of the same population variance."}
-knitr::include_graphics("ch_samples/images/pool2.png")
-```
-
-
-```{r pool3, echo=FALSE, out.width="80%", fig.cap="We create a single estimate of the population variance called pooled variance ($s_{pooled}^2$). When sample sizes are equal, the pooled variance is just the average of the two sample variances (both using n-1). When the sample sizes are unequal (i.e., different numbers of males and females), we need to use a more sophisticated formula to obtain the pooled variance."}
-knitr::include_graphics("ch_samples/images/pool3.png")
-```
-
-### Combining Everything
-
-When calculating the standardized mean difference we rarely have access to the entire population. Consequently, we need to estimate the population-level standardized mean difference using sample data. The sample-level approach to calculating SMD is presented below in Formula \@ref(eq:samplesmdch5). This value is known by many other names: $d$, Cohen's $d$, and Hedges $g$.
+Because we rarely have access to data for an entire population we typically want to estimate the population standardized mean difference using sample data. Many researcher esimate the population standardized mean difference from sample data using the Formula \@ref(eq:samplesmdch5) below. This value is known by many other names: $d$, Cohen's $d$, and Hedges $g$. Notice that the sample-level formula below, Formula \@ref(eq:samplesmdch5), is the same as the population level formula, Formula \@ref(eq:popsmdch5), only the notation differs.
 
 \begin{equation} 
 d  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}} 
       (\#eq:samplesmdch5)
 \end{equation} 
 
+Unfortunately, Formula \@ref(eq:samplesmdch5) provides a biased estimate of the population standardized mean difference for small sample sizes. That is, on average, Formula \@ref(eq:samplesmdch5), provides d-values that overestimate the size of the population standardize mean difference ($\delta$).
+
+Fortunately, we can obtain an unbiased estimate of the population-level standardized mean difference from sample data using Formula \@ref(eq:samplesmdunbiasedch5).
 
 \begin{equation} 
 d_{unbiased}  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}} \times [1 - \frac{3}{4(n_1 + n_2)-9}]
       (\#eq:samplesmdunbiasedch5)
 \end{equation} 
 
-$$
-\begin{aligned} 
-d_{unbiased}  &= d  \times [1 - \frac{3}{4(n_1 + n_2)-9}] \\
-\end{aligned} 
-$$
 
-$$
-\begin{aligned} 
-d  &= \frac{\bar{x}_{male} - \bar{x}_{female}}{s_{pooled}} \\
-\end{aligned} 
-$$
+If we try to apply either $d$-value formula (\@ref(eq:samplesmdch5) or \@ref(eq:samplesmdunbiasedch5)) to real data we quickly encounter a problem.  We don't have the pooled standard deviation, $s_{pooled}$
+
+## Pooled standard deviation
+When we calculated the population-level standardized mean difference, there was only one standard deviation (i.e., only one variance). More specifically, the male and female populations both had a standard deviation but it was the same for both populations. The population-level formula for the standardized mean difference, Formula \@ref(eq:popsmdch5) has only one standard deviation in it. This is because calculation of the standardized mean difference explicitly depends on the fact the both population have the same standard deviation.
+
+Let's consider some hypothetical sample data to make the situation clear. More specifically, examine the sample-level statistics below for males and females. In particular not that we have two standard deviations -- one for males and one for females. Moreover, these two sample-level standard deviation (using $n$-1)  are not the same - they are different from each other. This initially seems problematic calculation of standardized mean difference requires that population standard deviaitons are identical. Fortunately, it's not a problem. 
+
 
 $$
 \begin{aligned} 
-d_{unbiased}  &= d  \times [1 - \frac{3}{4(n_1 + n_2)-9}] \\
+\bar{x}_{males} &= 100 \\
+s_{males}^2 &= 10 \\
+s_{males} &= 10 \\
 \end{aligned} 
 $$
 
 
-```{r}
-male_population_heights <- pop_data %>% 
-  filter(sex == "male") %>%
-  pull(height)
+And females:
 
-female_population_heights <- pop_data %>% 
-  filter(sex == "female") %>%
-  pull(height)
-```
-
-
-```{r}
-many_samples<-  get_d_samples_from_population_data(pop1 = male_population_heights,
-                                   pop2 = female_population_heights,
-                                   cell.n = 10,
-                                   number.of.samples = 5000)
-```
-
-```{r}
-head(many_samples, 10)
-```
+$$
+\begin{aligned} 
+\bar{x}_{females} &= 100 \\
+s_{females}^2 &= 10 \\
+s_{females} &= 10 \\
+\end{aligned} 
+$$
 
 
+We need to recognize that the sample standard deviations are likely to differ from the population standard deviation due to sampling error. Consequently, we are likely to get two different sample standard deviations even if the population standard deviations are the same for male and females.
 
-```{r}
-many_samples %>%
-  summarise(mean_of_d = mean(sample.d)) %>%
-  as.data.frame()
-```
+How do we resolve this situation of having two sample standard deviations? The first step is to switch to thinking in terms of variance rather than standard deviation. Due to the way the math works - life becomes very complicated very quickly if we continue to think in terms of standard deviations. Let's reframe the problem into a variance problem. Variances are preferable to standard deviations because we can add and subtract variances - but not standard deviations.
 
-```{r}
-many_samples %>%
-  summarise(mean_of_d_unbiased = mean(sample.d.unbiased)) %>%
-  as.data.frame()
-```
+We have a sample variance for males () and a sample variance for females (). We view each of these sample variances as an estimate of the respective population variances (see Figure \@ref(fig:pool1)). That is, the male sample variance is an estimate of the male population variance. Likewise, the female sample variance is an estimate of the female population variance. However, we also **assume** that the population variances for males and females are the same. Consequently, the male sample variance and the female sample variance are both estimates of a single population variance (see Figure \@ref(fig:pool2)). Because the two sample variances are estimates of the same population variance, we can (when the sample sizes are equal) simple average them to obtain a better estimate of that single population variance. When we combine the two variances together to get a better estimate of the single population variance we can that new variance the pooled variance and represent it with the symbol $s_{pooled}^2$.
+
+When the sample sizes for males and females are the same (i.e., $n_{males} =n_{females}$) we can use the Formula \@ref(eq:poolvarequalch5) below to calculate the pooled variance.
+
+\begin{equation} 
+s_{pooled}^2  = \frac{s_{1}^2 + s_{2}^2}{2} 
+      (\#eq:poolvarequalch5)
+\end{equation} 
+
+When the sample sizes for males and females are the different (i.e., $n_{males} \ne n_{females}$) we can use the Formula \@ref(eq:poolvarch5) below to calculate the pooled variance. This formula can be used all of the time. We only show Formula \@ref(eq:poolvarequalch5), above, to make it clear that Formula \@ref(eq:poolvarch5) below is basically just averaging the variances in a way that takes sample size into account.
+
+\begin{equation} 
+s_{pooled}^2  = \frac{(n_1 -1)s_1^2 + (n_2 -1)s_2^2}{n_1 + n_2-2}
+      (\#eq:poolvarch5)
+\end{equation} 
+
+We get the single standard deviation we need, $s_{pooled}$, by taking the square root of the variance, $s_{pooled}^2$.
+
+$$
+\begin{aligned} 
+s_{pooled}  &= \sqrt{s_{pooled}^2} \\
+\end{aligned} 
+$$
+
+
+If we apply this approach to the data in our example:
+
+
+
 
 
 ## Meta-analysis
