--- a/07-sample_estimates.Rmd
+++ b/07-sample_estimates.Rmd
@@ -3,6 +3,8 @@
 
 In this section we focus on obtaining effect size estimates (e.g., correlation or standardized mean difference) from published articles. Often studies do not report effect sizes (e.g., $d$-values) or if they do, they don't report the confidence interval for that effect. We will learn more about confidence intervals in a future chapter, but for now, think of a confidence interval for a study/sample effect (e.g., $d$-value) as providing a plausible range of values for the population parameter (e.g., $\delta$). Below we learn the R commands needed to obtain effect sizes with confidence intervals from published articles.
 
+The ability to obtain effect size estimate from articles will be come extraordinarily important later in the course. Specifically, when it is time to engage in sample size planning (e.g., for your thesis) you will need to obtain estimates of the effects you are interested in from past research. The commands in this chapter will help you to do so.
+
 
 ## Estimating $\delta$
 
@@ -54,7 +56,7 @@ The population effect ($\delta$) is unknown but our sample estimate is $d$ = 1.8
 ##### t: Equal group sizes
 
 
-Scenario: A researcher does not report a $d$-value, descriptive statistics, or n per group. Fortunately, the researcher did report the $t$-value, $t$(98) = 8.30, and the fact that the groups were the same size. After reading the article you believe the intervention is only likely to affect the means of the groups and not the variances. We can use the information to calculate a $d$-value and confidence interval.
+Scenario: A researcher does not report a $d$-value, descriptive statistics, or n per group. Fortunately, the researcher did report the $t$-value, $t$(98) = 8.30, and the fact that the groups were the same size. After reading the article you believe the intervention is only likely to affect the means of the groups and not the variances - so a pooled variance term for the denominator of the $d$-value is appropriate. We can use the information provided to calculate a $d$-value and confidence interval.
 
 To calculate the $d$-value we need to know the number of people per group. We can obtain that information from the degrees of freedom (98) using the formula below.
 
@@ -87,7 +89,7 @@ The population effect ($\delta$) is unknown but our sample estimate is $d$ = 1.6
 
 ##### t: Unequal group sizes
 
-Scenario: A researcher does not report a $d$-value or descriptive statistics. Fortunately, the researcher did report the $t$-value, $t$(98) = 9.36, and the fact that the groups had 65 and 35 people. After reading the article you believe the intervention is only likely to affect the means of the groups and not the variances. We can use the information to calculate a $d$-value and confidence interval.
+Scenario: A researcher does not report a $d$-value or descriptive statistics. Fortunately, the researcher did report the $t$-value, $t$(98) = 9.36, and the fact that the groups had 65 and 35 people. After reading the article you believe the intervention is only likely to affect the means of the groups and not the variances - so a pooled variance term for the denominator of the $d$-value is appropriate. We can use the information provided to calculate a $d$-value and confidence interval.
 
 ```{r}
 library(MBESS)
@@ -99,7 +101,7 @@ The population effect ($\delta$) is unknown but our sample estimate is $d$ = 1.7
 
 #### $d$ denominator: Control group variance
 
-In this section we focus on calculating the $d$-value when the researcher in the published article has used the standard deviation of a single group as the denominator for the $d$-value. This is usually done when the researcher believes an experimental intervention will influence both group means and group standard deviations. Researcher who use this approach will hopefully have made it clear what they have done. It's you're not sure what a researcher has done I suggest using the pooled variance approach for the denominator above.
+In this section we focus on calculating the $d$-value when the researcher of the published article has used the standard deviation of a single group as the denominator for the $d$-value. This is usually done when the researcher believes an experimental intervention will influence both group means and group standard deviations. Researcher who use this approach will hopefully have made it clear what they have done. If you're not sure what a researcher has done I suggest using the pooled variance approach for the denominator above.
 
 ##### Reported $d$-value no confidence interval
 
@@ -114,7 +116,7 @@ The population effect ($\delta$) is unknown but our sample estimate is $d$ = 0.8
 
 ##### Using cell means
 
-Scenario: A researcher does not report a $d$-value but indicates the descriptive statistics for the groups. For the experimental group $M$ = 5.00, $SD$ = 1.20, and $n$ = 50. For the control group, $M$ = 3.00, $SD$ = 1.40, and $n$ = 50.  After reading the article you believe that intervention might well influence both means and standard deviations. Therefore, you think a control group standard deviation should be the frame of reference for the $d$-value. You can the standardized mean difference (i.e., independent groups $d$-value) using the command below:
+Scenario: A researcher does not report a $d$-value but indicates the descriptive statistics for the groups. For the experimental group $M$ = 5.00, $SD$ = 1.20, and $n$ = 50. For the control group, $M$ = 3.00, $SD$ = 1.40, and $n$ = 50.  After reading the article you believe that intervention might well influence both means and standard deviations. Therefore, you think a control group standard deviation should be the frame of reference for the $d$-value. You can calculate the standardized mean difference (i.e., independent groups $d$-value) using the command below:
 
 ```{r}
 library(MBESS)
@@ -144,8 +146,6 @@ d & = \frac{\bar{x}_{diff}}{s_{diff}}
 \end{aligned}
 $$
 
-In the repeated-measures calculations below we use the formula above.
-
 
 #### Reported repeated $d$-value, no confidence interval
 
@@ -156,13 +156,13 @@ library(MBESS)
 ci.sm(sm = .50, N = 150) 
 ```
 
-In this repeated measures design the population effect ($\delta$) is unknown but our sample estimate a weight loss of $d = 0.50$, 95% CI [0.33, 0.67]. This $d$-value will differ from the population effect ($\delta$) due to sampling error. The confidence interval indicates that a plausible range for $\delta$ is 0.33 to 0.67.
+In this repeated measures design the population effect ($\delta$) is unknown but our sample estimate of weight loss is $d = 0.50$, 95% CI [0.33, 0.67]. This $d$-value will differ from the population effect ($\delta$) due to sampling error. The confidence interval indicates that a plausible range for $\delta$ is 0.33 to 0.67.
 
 #### Using repeated measures mean difference 
 
 Scenario: A researcher reports a repeated-measures design on weight loss but does not report the $d$-value or confidence interval. He does report, however, that weights decreased on average by 3.00 lbs, SD = 6.00. 
 
-In order to understand what the M = 3.00 lbs, SD = 6.00 refers to, consider the following situation. The participants "weigh in" at time 1. They diet for three months. Then they "weight out" at time 2.  There are now two columns (time1, time2) with weight information. We can create a third column, called diff, by subtracting time 1 weight from time 2 weights. That is, diff = time 2 weight - time 1 weight. The new diff column indicates how the weights for each person have changed over the diet. The mean of the diff column is $\bar{x}_{diff}$ = 3.00 and the standard deviation of the diff column is $s_{diff}$ = 6.00.
+In order to understand what the M = 3.00 lbs, SD = 6.00 refers to, consider the following situation. The participants "weigh in" at time 1. They diet for three months. Then they "weight out" at time 2.  There are now two columns (time1, time2) with weight information - one participant per row. We can create a third column, called diff, by subtracting time 1 weight from time 2 weights. That is, diff = time 2 weight - time 1 weight. The new diff column indicates how the weights for each person have changed over the diet. The mean of the diff column is $\bar{x}_{diff}$ = 3.00 and the standard deviation of the diff column is $s_{diff}$ = 6.00.
 
 This information can be used in the formula below:
 
@@ -180,7 +180,7 @@ library(MBESS)
 ci.sm(sm = .5, N =150) 
 ```
 
-In this repeated measures design the population effect ($\delta$) is unknown but our sample estimate a weight loss of $d = 0.50$, 95% CI [0.33, 0.67]. This $d$-value will differ from the population effect ($\delta$) due to sampling error. The confidence interval indicates that a plausible range for $\delta$ is 0.33 to 0.67.
+In this repeated measures design the population effect ($\delta$) is unknown but our sample estimate of weight loss is $d = 0.50$, 95% CI [0.33, 0.67]. This $d$-value will differ from the population effect ($\delta$) due to sampling error. The confidence interval indicates that a plausible range for $\delta$ is 0.33 to 0.67.
 
 
 #### Using repeated measures cell information
@@ -189,7 +189,7 @@ Scenario: A researcher reports a repeated-measures design on weight loss but doe
 
 In order to understand what the M = 140 lbs, SD = 5 refers to, consider the following situation. The participants "weigh in" at time 1. They diet for three months. Then they "weight out" at time 2.  There are now two columns (time1, time2) with weight information. We can create a third column, called diff, by subtracting time 1 weight from time 2 weights. That is, diff = time 2 weight - time 1 weight. The new diff column indicates how the weights for each person have changed over the diet. 
 
-The researcher report the of the time 1 and time 2 columns but nothing about the diff column. We can, however, figure the the mean of the diff column, $bar{x}_{diff}$, and the standard deviation of the diff column, $s_{diff}$, from the information provided.
+The researcher reports descriptive statistics (M, SD) for the time 1 and time 2 columns but nothing about the diff column. We can, however, figure the the mean of the diff column, $bar{x}_{diff}$, and the standard deviation of the diff column, $s_{diff}$, from the information provided.
 
 Recall the formula for repeated measures $d$-value:
 
@@ -216,20 +216,20 @@ We begin by calculating $s_{diff}^2$ which is variance of the column of differen
 
 $$
 \begin{aligned}
-s_{diff}^2 & = s_1^2 + s_2^2 - 2(s_1)(s_2)r_{12} \\
-& = 5^2  + 6^2 - 2(5)(6)(.80)\\
-& = 25  + 36 - 48\\
-& = 13
+s_{diff}^2 & = s_1^2 + s_2^2 + 2(s_1)(s_2)r_{12} \\
+& = 5^2  + 6^2 + 2(5)(6)(.80)\\
+& = 25  + 36 + 48\\
+& = 109
 \end{aligned}
 $$
 
-We obtian $s_{diff}$  by taking the square root of $s_{diff}^2$:
+We obtain $s_{diff}$  by taking the square root of $s_{diff}^2$:
 
 $$
 \begin{aligned}
 s_{diff} & = \sqrt{s_{diff}^2} \\
-& = \sqrt{13}\\
-& = 3.605551
+& = \sqrt{109}\\
+& = 10.44031
 \end{aligned}
 $$
 
@@ -238,18 +238,19 @@ Then we calculate the $d$-value using the numerator and denominator we calculate
 $$
 \begin{aligned}
 d & = \frac{\bar{x}_{diff}}{s_{diff}}\\
-& = \frac{8}{3.605551} \\
-& = 2.22\\
+& = \frac{8}{10.44031} \\
+& = 0.7662608\\
+& = 0.77\\
 \end{aligned}
 $$
-The $d$-value is 2.22 but we need a confidence interval:
+The $d$-value is 0.77 but we need a confidence interval:
 
 ```{r}
 library(MBESS)
-ci.sm(sm = 2.22, N =100) 
+ci.sm(sm = 0.77, N =100) 
 ```
 
-In this repeated measures design the population effect ($\delta$) is unknown but our sample estimate of weight loss is $d$ = 2.22, 95% CI [1.85, 2.58]. This $d$-value will differ from the population effect ($\delta$) due to sampling error. The confidence interval indicates that a plausible range for $\delta$ is 1.85 to 2.58.
+In this repeated measures design the population effect ($\delta$) is unknown but our sample estimate of weight loss is $d$ = 0.77, 95% CI [0.55, 0.99]. This $d$-value will differ from the population effect ($\delta$) due to sampling error. The confidence interval indicates that a plausible range for $\delta$ is 0.55 to 0.99.
 
 
 #### Using repeated measures $t$-value
